fixed tenantController
